2005-11-14  Stefan Monnier  <monnier@iro.umontreal.ca>

	* inf-haskell.el (inferior-haskell-error-regexp-alist): Fix GHCi
	regexp, add support for warnings.

2005-11-11  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile (dist): Remove profile file and avoid ztar.

	* inf-haskell.el (inferior-haskell-command): Provide a default.
	(with-selected-window): Define if necessary.
	(inferior-haskell-load-file): Display the buffer.

	* haskell-indent.el (haskell-indent-indentation-info): Typo.

	* haskell-ghci.el (haskell-ghci-mode): Use define-derived-mode.

2005-11-07  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Release version 2.1.

	* haskell-indent.el (haskell-indent-inside-comment): Rename `start' arg
	into `open' and add a new `start' arg.
	(haskell-indent-after-keywords): Change defaults for `in'.
	(haskell-indent-indentation-info): Fix confusion between pos and col.
	(haskell-indent-mode): Autoload.

	* haskell-indent.el (haskell-indent-find-matching-start):
	Add `pred' and `start' arguments.
	(haskell-indent-filter-let-no-in): New fun.
	(haskell-indent-indentation-info): Use them to correctly match `let's
	with `in's even when some of the `let's have no matching `in'.

2005-11-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* haskell-indent.el: Reduce the use of dyn-bound haskell-indent-info.
	(haskell-indent-push-col): Don't duplicate info.
	(haskell-indent-line-indentation): Handle let-in-do.  Remove dead code.
	(haskell-indent-inside-comment): Move rest of code from
	haskell-indent-indentation-info.

	* haskell-indent.el (haskell-literate): Declare.
	(haskell-running-xemacs, event-basic-type, read-event): Remove.
	(haskell-indent-get-beg-of-line, haskell-indent-get-end-of-line):
	Remove.  Use line-(beginning|end)-position instead.
	(haskell-indent-mark-active): Move the xemacs test inside the defun.
	(haskell-indent-info): Rename from indent-info.  Update users.
	(haskell-indent-bolp, haskell-indent-inside-comment):
	Use line-beginning-position.